cambios en catalogo general y productosExtractos

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             <img src="multimedia/fotos_inicio_nosotros/banner_inicio_mobile2.jpg" alt="banner" class="banner2">
             <h2 class="sloganBanner">Bello y Limpio, Kirei</h2>
             <h3 class="subTitulobanner">Compra los mejores jabones veganos</h3>
-            <button type="button" class="btnBanner">Ver el catalogo</button>
+            <button type="button" class="btnBanner"><a href="catalogo/general.html">Ver el catalogo</button></a> 
         </div>
         <div class="row boxCarrusel mt-5  "> 
             <h3 class="tituloCarrusel">Los más vendidos</h3>
