--- a/productos/masajeadorExtractos.html
+++ b/productos/masajeadorExtractos.html
@@ -52,7 +52,7 @@
             <div class="col-md-5 texto">
               <h1 class="titulo_producto">Masajeadores con extractos</h1>
               <p class="textoP">El jabón masajeador estimula la circulación sanguínea y relaja los músculos. Son a base de coco. Peso aproximado 120 gr.</p>
-                <div class="container-fluid">
+                <div class="container-fluid ps-4">
                   <div class="row">
                     <div class="col-md-6">
                       <p class="lineas"><strong>Lavanda con Romero</strong></p>
