--- a/catalogo/general.html
+++ b/catalogo/general.html
@@ -65,7 +65,7 @@
                             <!-- ELIMINAR los <div class="col-md-3"> y pasar la clase col-md-4 a cada item -->
                             <!-- el row debe sumar 12 columnas -->  
                             <!-- con eso se adapta perfectamente -->
-                                <h5 class="catalogo  carta col-4 col-md-12  ">Catálogo</h5>
+                                <h5 class="catalogo col-4 col-md-12  ">Catálogo</h5>
                                 <div class="card carta col-md-4">
                                     <a href="../productos/masajeadorExtractos.html"><img src="../multimedia/Fotos catalogo/c_masajeador_con_extractos.jpg" class="w-100 " alt="masajeador con extractos"></a>
                                     <div class="card-body">
