--- a/catalogo/general.html
+++ b/catalogo/general.html
@@ -45,7 +45,7 @@
     <main>
         <div class="container-fluid general"> <!-- aca no debe estar el padding, eliminar esa clase -->
             <div class="row gx-0">
-                <div class="col-md-3 ps-2 px-md-2 ps-lg-4  ps-xl-4 ps-xxl-5 botonesSeleccion"> <!-- aca debe estar el padding, como ejemplo puse ese ps-5, hay que hacerlo con una glase aparte, no alcanza con ps-5 -->
+                <div class="col-12 col-md-3 ps-2 px-md-2 ps-lg-4  ps-xl-4 ps-xxl-5 botonesSeleccion"> <!-- aca debe estar el padding, como ejemplo puse ese ps-5, hay que hacerlo con una glase aparte, no alcanza con ps-5 -->
                         
                     <div class="borde   ps-md-0 ps-lg-4 ps-xl-4 ps-xxl-5 pb-5 pb-md-0">
                         <h1 class="titulo_catalogo">Categorías</h1>
