--- a/catalogo/patisserie.html
+++ b/catalogo/patisserie.html
@@ -44,77 +44,77 @@
     </header>
     <main>
         <div class="container-fluid general">
-            <div class="row">
-                <div class="col-md-2">
-                    <h1 class="titulo_catalogo">Categorías</h1>
-                    <div class="borde">
-                        <a href="./general.html"><p class="categorias">Todos los productos</p></a>
+            <div class="row gx-0">
+                <div class="col-12 col-md-3 ps-2 ps-lg-4  ps-xl-4 ps-xxl-5 botonesSeleccion"> <!-- aca debe estar el padding, como ejemplo puse ese ps-5, hay que hacerlo con una glase aparte, no alcanza con ps-5 -->
+                    <h1 class="titulo_catalogo ps-lg-4 ps-xl-4 ps-xxl-5 pb-5 pb-md-0">Categorías</h1>    
+                    <div class="borde  ps-lg-4 ps-xl-4 ps-xxl-5 pb-5 pb-md-0"> 
+                        <a href="./general.html"><p class="categorias"><strong>Todos los productos</strong></p></a>
                         <a href="./masajeador.html"><p class="categorias">Masajeadores</p></a>
                         <a href="./tocador.html"><p class="categorias">Tocador</p></a>
                         <a href="./bolsitas.html"><p class="categorias">Bolsitas</p></a>
-                        <a href="./patisserie.html"><p class="categorias"><strong>Patisserie</strong></p></a>
+                        <a href="./patisserie.html"><p class="categorias">Patisserie</p></a>
                         <a href="./exfoliante.html"><p class="categorias">Exfoliantes</p></a>
                         <a href="./jaboneras.html"><p class="categorias">Joboneras</p></a>
                     </div>
                 </div>
-                <div class="col-md-10">
-                    <h5 class="catalogo">Patisserie</h5>
-                    <div class="container">
-                        <div class="row cartaSeccion">
-                          <div class="col-md-4">
-                            <div class="card carta">
-                                <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos catalogo/c_paletas.jpg" class="card-img-top" alt="jabon paletas"></a>
-                                <div class="card-body">
-                                    <p class="card-text carta-text">Paletas</p>
-                                </div>
+                <div class="col-md-9 miCol10">
+                    <div class="row contenido  gx-0">
+                        <h5 class="catalogo">Patisserie</h5>
+                        <div class="col-md-4 card carta">
+                            <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos catalogo/c_paletas.jpg"
+                                    class="card-img-top" alt="jabon paletas"></a>
+                            <div class="card-body">
+                                <p class="card-text carta-text">Paletas</p>
                             </div>
-                            <div class="card carta">
-                                <a href="../productos/patisserieFlan.html"><img src="../multimedia/Fotos catalogo/c-flan-con-caramelo.jpg" class="card-img-top" alt="jabon Flan"></a>
-                                <div class="card-body">
-                                    <p class="card-text carta-text">Flan de caramelo</p>
-                                </div>
+                        </div>
+                        <div class="col-md-4 card carta">
+                            <a href="../productos/patisserieFlan.html"><img src="../multimedia/Fotos catalogo/c-flan-con-caramelo.jpg"
+                                    class="card-img-top" alt="jabon Flan"></a>
+                            <div class="card-body">
+                                <p class="card-text carta-text">Flan de caramelo</p>
                             </div>
-                            <div class="card carta">
-                                <a href="../productos/patisserieDonas.html"><img src="../multimedia/Fotos catalogo/c-donitas.jpg" class="card-img-top" alt="jabon Donitas"></a>
-                                <div class="card-body">
-                                    <p class="card-text carta-text">Donitas</p>
-                                </div>
+                        </div>
+                        <div class="col-md-4 card carta">
+                            <a href="../productos/patisserieDonas.html"><img src="../multimedia/Fotos catalogo/c-donitas.jpg"
+                                    class="card-img-top" alt="jabon Donitas"></a>
+                            <div class="card-body">
+                                <p class="card-text carta-text">Donitas</p>
                             </div>
-                          </div>
-                          <div class="col-md-4">
-                            <div class="card carta">
-                                <a href="../productos/patisserieCupcakes.html"><img src="../multimedia/Fotos catalogo/c-cupcakes.jpg" class="card-img-top" alt="jabon Cupcakes"></a>
-                                <div class="card-body">
-                                    <p class="card-text carta-text">Cupcakes</p>
-                                </div>
+                        </div>
+                        <div class="col-md-4 card carta">
+                            <a href="../productos/patisserieCupcakes.html"><img src="../multimedia/Fotos catalogo/c-cupcakes.jpg"
+                                    class="card-img-top" alt="jabon Cupcakes"></a>
+                            <div class="card-body">
+                                <p class="card-text carta-text">Cupcakes</p>
                             </div>
-                            <div class="card carta">
-                                <a href="../productos/patisserieCheescake.html"><img src="../multimedia/Fotos catalogo/c-cheescake.jpg" class="card-img-top" alt="jabon Cheescake"></a>
-                                <div class="card-body">
-                                    <p class="card-text carta-text">Cheescake</p>
-                                </div>
+                        </div>
+                        <div class="col-md-4 card carta">
+                            <a href="../productos/patisserieCheescake.html"><img src="../multimedia/Fotos catalogo/c-cheescake.jpg"
+                                    class="card-img-top" alt="jabon Cheescake"></a>
+                            <div class="card-body">
+                                <p class="card-text carta-text">Cheescake</p>
                             </div>
-                            <div class="card carta">
-                                <a href="../productos/patisseriePie.html"><img src="../multimedia/Fotos catalogo/c_lemon_pie.jpg" class="card-img-top" alt="jabon pie"></a>
-                                <div class="card-body">
-                                    <p class="card-text carta-text">Lemon pie</p>
-                                </div>
+                        </div>
+                        <div class="col-md-4 card carta">
+                            <a href="../productos/patisseriePie.html"><img src="../multimedia/Fotos catalogo/c_lemon_pie.jpg"
+                                    class="card-img-top" alt="jabon pie"></a>
+                            <div class="card-body">
+                                <p class="card-text carta-text">Lemon pie</p>
                             </div>
-                          </div>
-                          <div class="col-md-4">
-                            <div class="card carta">
-                                <a href="../productos/patisserieMerengues.html"><img src="../multimedia/Fotos catalogo/c_merenguitos.jpg" class="card-img-top" alt="jabon Merenguitos"></a>
-                                <div class="card-body">
-                                    <p class="card-text carta-text">Merenguitos</p>
-                                </div>
-                            </div>
-                            <div class="card carta">
-                                <a href="../productos/patisserieGelatina.html"><img src="../multimedia/Fotos catalogo/c_gelatina.jpg" class="card-img-top" alt="jabon Gelatinas"></a>
-                                <div class="card-body">
-                                    <p class="card-text carta-text">Gelatinas</p>
-                                </div>
-                            </div>
-                          </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4 card carta">
+                        <a href="../productos/patisserieMerengues.html"><img src="../multimedia/Fotos catalogo/c_merenguitos.jpg"
+                                class="card-img-top" alt="jabon Merenguitos"></a>
+                        <div class="card-body">
+                            <p class="card-text carta-text">Merenguitos</p>
+                        </div>
+                    </div>
+                    <div class="col-md-4 card carta">
+                        <a href="../productos/patisserieGelatina.html"><img src="../multimedia/Fotos catalogo/c_gelatina.jpg"
+                                class="card-img-top" alt="jabon Gelatinas"></a>
+                        <div class="card-body">
+                            <p class="card-text carta-text">Gelatinas</p>
                         </div>
                     </div>
                 </div>
