--- a/catalogo/tocador.html
+++ b/catalogo/tocador.html
@@ -31,7 +31,6 @@
                                 <a class="nav-link" href="../index.html">Inicio</a>
                                 <a class="nav-link" href="./general.html">Catalogo</a>
                                 <a class="nav-link" href="../pages/nosotros.html">Sobre Nosotros</a>
-                                <!-- <a class="nav-link" href="#">Contactanos</a> -->
                                 <a class="nav-link" target="_blanck"href="https://api.whatsapp.com/send?phone=541150099051&amp;text=Hola!&nbsp;dejanos&nbsp;tu&nbsp;mensaje"target="_blank">
                                 Contactanos
                                 </a>
@@ -44,57 +43,56 @@
     </header>
     <main>
         <div class="container-fluid general">
-            <div class="row">
-                <div class="col-md-2">
-                    <h1 class="titulo_catalogo">Categorías</h1>
-                    <div class="borde">
-                        <a href="./general.html"><p class="categorias">Todos los productos</p></a>
+            <div class="row gx-0">
+                <div class="col-12 col-md-3 ps-2 ps-lg-4  ps-xl-4 ps-xxl-5 botonesSeleccion"> <!-- aca debe estar el padding, como ejemplo puse ese ps-5, hay que hacerlo con una glase aparte, no alcanza con ps-5 -->
+                    <h1 class="titulo_catalogo ps-lg-4 ps-xl-4 ps-xxl-5 pb-5 pb-md-0">Categorías</h1>    
+                    <div class="borde  ps-lg-4 ps-xl-4 ps-xxl-5 pb-5 pb-md-0"> 
+                        <a href="./general.html"><p class="categorias"><strong>Todos los productos</strong></p></a>
                         <a href="./masajeador.html"><p class="categorias">Masajeadores</p></a>
-                        <a href="./tocador.html"><p class="categorias"><strong>Tocador</strong></p></a>
+                        <a href="./tocador.html"><p class="categorias">Tocador</p></a>
                         <a href="./bolsitas.html"><p class="categorias">Bolsitas</p></a>
                         <a href="./patisserie.html"><p class="categorias">Patisserie</p></a>
                         <a href="./exfoliante.html"><p class="categorias">Exfoliantes</p></a>
                         <a href="./jaboneras.html"><p class="categorias">Joboneras</p></a>
                     </div>
                 </div>
-                <div class="col-md-10">
-                    <h5 class="catalogo">Tocador</h5>
-                    <div class="container">
-                        <div class="row cartaSeccion">
-                            <div class="col">
-                                <div class="card carta">
-                                    <a href="../productos/tocadorCorazon.html"><img src="../multimedia/Fotos catalogo/c_jabones_de_tocador_corazon_diamante_con_nacar.jpg" class="card-img-top" alt="tocador corazon"></a>
-                                    <div class="card-body">
+                <div class="col-md-9 miCol10 ">
+                    
+                        <div class="row contenido  gx-0">
+                            <h5 class="catalogo">Tocador</h5>
+                            <div class="col-md-4 card carta">
+                                <a href="../productos/tocadorCorazon.html"><img
+                                        src="../multimedia/Fotos catalogo/c_jabones_de_tocador_corazon_diamante_con_nacar.jpg"
+                                        class="card-img-top" alt="tocador corazon"></a>
+                                <div class="card-body">
                                     <p class="card-text carta-text">Jabónes de tocador corazón diamante con nácar</p>
-                                    </div>
                                 </div>
                             </div>
-                            <div class="col">
-                                <div class="card carta">
-                                    <a href="../productos/tocadorRedondo.html"><img src="../multimedia/Fotos catalogo/c_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top" alt="tocador redondos"></a>
-                                    <div class="card-body">
+                            <div class="col-md-4 card carta">
+                                <a href="../productos/tocadorRedondo.html"><img
+                                        src="../multimedia/Fotos catalogo/c_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top"
+                                        alt="tocador redondos"></a>
+                                <div class="card-body">
                                     <p class="card-text carta-text">Jabónes de tocador redondos o rectangulares</p>
-                                    </div>
                                 </div>
                             </div>
-                            <div class="col">
-                                <div class="card carta">
-                                    <a href="../productos/tocadorSemanal.html"><img src="../multimedia/Fotos catalogo/c_ jabones_de_tocador_semanal.jpg" class="card-img-top" alt="tocador semanal"></a>
-                                    <div class="card-body">
+                            <div class="col-md-4 card carta">
+                                <a href="../productos/tocadorSemanal.html"><img
+                                        src="../multimedia/Fotos catalogo/c_ jabones_de_tocador_semanal.jpg" class="card-img-top"
+                                        alt="tocador semanal"></a>
+                                <div class="card-body">
                                     <p class="card-text carta-text p-2 m-1">Jabónes de tocador semanal</p>
-                                    </div>
                                 </div>
                             </div>
-                            <div class="col">
-                                <div class="card carta">
-                                    <a href="../productos/tocadorPintado.html"><img src="../multimedia/Fotos catalogo/c_jabones_de_tocador_pintados.jpg" class="card-img-top" alt="tocador pintados"></a>
-                                    <div class="card-body">
+                            <div class="col-md-4 card carta">
+                                <a href="../productos/tocadorPintado.html"><img
+                                        src="../multimedia/Fotos catalogo/c_jabones_de_tocador_pintados.jpg" class="card-img-top"
+                                        alt="tocador pintados"></a>
+                                <div class="card-body">
                                     <p class="card-text carta-text">Jabónes de tocador pintados</p>
-                                    </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
                 </div>
             </div>       
         </div>
