--- a/productos/masajeadorOrganico.html
+++ b/productos/masajeadorOrganico.html
@@ -46,11 +46,11 @@
         <a class="volver" href="../catalogo/masajeador.html"><h5 class="subtitulo_productos">Catálogo > Masajeadores</h5></a>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <img class="producto" src="../multimedia/Fotos Producto/p_masajeador_con_hojas.jpg" alt="masajeador organicas">
+            <div class="col-md-6 producto">
+              <img class="img-fluid" src="../multimedia/Fotos Producto/p_masajeador_con_hojas.jpg" alt="masajeador organicas">
             </div>
             <div class="col-md-6 texto">
-              <h1 class="titulo_productoDos">Masajeadores con extractos</h1>
+              <h1 class="titulo_productoDos">Masajeadores con hojas orgánicas</h1>
               <p class="textoR">El jabón masajeador estimula la circulación sanguínea y relaja los músculos. Es un jabón combinado a base de coco y glicerina.</p>
               <p>Peso aproximado 80 gr.</p>
               <p class="lineas"><strong>Cítricos con hojas de té verde</strong></p>
