--- a/productos/tocadorCorazon.html
+++ b/productos/tocadorCorazon.html
@@ -46,8 +46,8 @@
         <a class="volver" href="../catalogo/tocador.html"><h5 class="subtitulo_productos">Catálogo > Tocador</h5></a>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <img class="producto" src="../multimedia/Fotos Producto/p_jabones_de_tocador_corazon_diamante_con_nacar.jpg" alt="tocador corazon">
+            <div class="col-md-6 producto">
+              <img class="img-fluid" src="../multimedia/Fotos Producto/p_jabones_de_tocador_corazon_diamante_con_nacar.jpg" alt="tocador corazon">
             </div>
             <div class="col-md-6 texto">
               <h1 class="titulo_productoDos">Corazón diamante de nacar - Jabón de tocador</h1>
