--- a/catalogo/masajeador.html
+++ b/catalogo/masajeador.html
@@ -44,12 +44,12 @@
     </header>
     <main>
         <div class="container-fluid general">
-            <div class="row">
-                <div class="col-md-2">
-                    <h1 class="titulo_catalogo">Categorías</h1>
-                    <div class="borde">
-                        <a href="./general.html"><p class="categorias">Todos los productos</p></a>
-                        <a href="./masajeador.html"><p class="categorias"><strong>Masajeadores</strong></p></a>
+            <div class="row gx-0">
+                <div class="col-12 col-md-3 ps-2 ps-lg-4  ps-xl-4 ps-xxl-5 botonesSeleccion"> <!-- aca debe estar el padding, como ejemplo puse ese ps-5, hay que hacerlo con una glase aparte, no alcanza con ps-5 -->
+                    <h1 class="titulo_catalogo ps-lg-4 ps-xl-4 ps-xxl-5 pb-5 pb-md-0">Categorías</h1>    
+                    <div class="borde  ps-lg-4 ps-xl-4 ps-xxl-5 pb-5 pb-md-0"> 
+                        <a href="./general.html"><p class="categorias"><strong>Todos los productos</strong></p></a>
+                        <a href="./masajeador.html"><p class="categorias">Masajeadores</p></a>
                         <a href="./tocador.html"><p class="categorias">Tocador</p></a>
                         <a href="./bolsitas.html"><p class="categorias">Bolsitas</p></a>
                         <a href="./patisserie.html"><p class="categorias">Patisserie</p></a>
@@ -57,26 +57,24 @@
                         <a href="./jaboneras.html"><p class="categorias">Joboneras</p></a>
                     </div>
                 </div>
-                <div class="col-md-10">
-                    <h5 class="catalogo">Masajeadores</h5>
-                    <div class="container">
-                        <div class="row">
-                            <div class="col-md-5">
-                                <div class="card carta cartaSeccion">
-                                    <a href="../productos/masajeadorExtractos.html"><img src="../multimedia/Fotos catalogo/c_masajeador_con_extractos.jpg" class="card-img-top" alt="masajeador extractos"></a>
-                                    <div class="card-body">
-                                    <p class="card-text carta-text">Masajeador con extractos</p>
-                                    </div>
-                                </div>                          
+                <div class="col-md-9  miCol10">
+                    <div class="row contenido  gx-0">
+                        <h5 class="catalogo col-12">Masajeadores</h5>
+                        <div class="col-md-6 card carta">
+                            <a href="../productos/masajeadorExtractos.html"><img
+                                    src="../multimedia/Fotos catalogo/c_masajeador_con_extractos.jpg" class="card-img-top"
+                                    alt="masajeador extractos"></a>
+                            <div class="card-body">
+                                <p class="card-text carta-text">Masajeador con extractos</p>
                             </div>
-                            <div class="col-md-5">
-                                <div class="card carta">
-                                    <a href="../productos/masajeadorOrganico.html"><img src="../multimedia/Fotos Producto/p_masajeador_con_hojas.jpg" class="card-img-top" alt="masajeador organicas"></a>
-                                    <div class="card-body">
-                                    <p class="card-text carta-text">Masajeador con hojas organicas</p>
-                                    </div>
-                                </div>                          
-                            </div>                          
+                        </div>
+                        <div class="col-md-6 card carta">
+                            <a href="../productos/masajeadorOrganico.html"><img
+                                    src="../multimedia/Fotos Producto/p_masajeador_con_hojas.jpg" class="card-img-top"
+                                    alt="masajeador organicas"></a>
+                            <div class="card-body">
+                                <p class="card-text carta-text">Masajeador con hojas organicas</p>
+                            </div>
                         </div>
                     </div>
                 </div>
