--- a/productos/masajeadorExtractos.html
+++ b/productos/masajeadorExtractos.html
@@ -31,7 +31,6 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                             <a class="nav-link" href="../catalogo/general.html">Catalogo</a>
                             <a class="nav-link" href="../pages/nosotros.html">Sobre Nosotros</a>
-                            <!-- <a class="nav-link" href="#">Contactanos</a> -->
                             <a class="nav-link" target="_blanck"href="https://api.whatsapp.com/send?phone=541150099051&amp;text=Hola!&nbsp;dejanos&nbsp;tu&nbsp;mensaje"target="_blank">
                             Contactanos
                             </a>
@@ -46,87 +45,88 @@
         <a class="volver" href="../catalogo/masajeador.html"><h5 class="subtitulo_productos">Catálogo > Masajeadores</h5></a>
         <div class="container-fluid">
           <div class="row">
-            <div class="col-md-6">
-              <img class="producto" src="../multimedia/Fotos Producto/p_masajeador_con_extractos.jpg" alt="masajeador extractos">
+            <div class="col-md-6 producto">
+              <img class=" img-fluid" src="../multimedia/Fotos Producto/p_masajeador_con_extractos.jpg" alt="masajeador extractos">
             </div>
-            <div class="col-md-5 texto">
-              <h1 class="titulo_producto">Masajeadores con extractos</h1>
-              <p class="textoP">El jabón masajeador estimula la circulación sanguínea y relaja los músculos. Son a base de coco. Peso aproximado 120 gr.</p>
-                <div class="container-fluid ps-4">
-                  <div class="row">
-                    <div class="col-md-6">
+            <div class="col-md-6 texto">
+              <div class="row gx-0">
+                <h1 class="titulo_producto">Masajeadores con extractos</h1>
+                <p class="textoP">El jabón masajeador estimula la circulación sanguínea y relaja los músculos. Son a base de coco. Peso aproximado 120 gr.</p>
+              </div>
+                <!-- <div class="container-fluid ps-4"> -->
+                  <div class="row gx-0">
+                    <div class="col-md-6 pe-2">
                       <p class="lineas"><strong>Lavanda con Romero</strong></p>
                       <p class="lineas">Ideal para pieles sensibles propensas a afecciones.</p>
-                      <p>Antiinflamatorio - Calmante - Hidratante</p>
-                      <p class="lineas"><strong>Yogurt de Frutilla con Ceramidas</strong></p>
+                      <p class="lineas">Antiinflamatorio - Calmante - Hidratante</p>
+                      <p class="lineas pt-3"><strong>Yogurt de Frutilla con Ceramidas</strong></p>
                       <p class="lineas">Ideal para pieles sensibles al sol y resecas.</p>
-                      <p>Hidrata - Brinda elasticidad - Regenera la piel</p>
-                      <p class="lineas"><strong>Verbena con Té verde y Extracto de tilo</strong></p>
+                      <p class="lineas">Hidrata - Brinda elasticidad - Regenera la piel</p>
+                      <p class="lineas pt-3"><strong>Verbena con Té verde y Extracto de tilo</strong></p>
                       <p class="lineas">Ideal para pieles grasas.</p>
-                      <p>Relaja - Suaviza - Astringente</p>
+                      <p class="lineas">Relaja - Suaviza - Astringente</p>
                     </div>
-                    <div class="col-md-6">
+                    <div class="col-md-6 ">
                       <p class="lineas"><strong>Bambú con Lemongrass y Extracto de gingko biloba</strong></p>
                       <p class="lineas">Ideal para pieles estresadas.</p>
-                      <p>Tonificante - Antiinflamatorio - Antiage</p>
-                      <p class="lineas"><strong>Maderas indias con Cítricos y Extracto de melisa</strong></p>
+                      <p class="lineas">Tonificante - Antiinflamatorio - Antiage</p>
+                      <p class="lineas pt-3"><strong>Maderas indias con Cítricos y Extracto de melisa</strong></p>
                       <p class="lineas">Ideal para pieles mixtas.</p>
-                      <p>Equilibra - estimula la piel - Alivia el estrés</p>
-                      <p class="lineas"><strong>Maderas dulces + Vainilla + Extracto de ginseng</strong></p>
+                      <p class="lineas">Equilibra - estimula la piel - Alivia el estrés</p>
+                      <p class="lineas pt-3"><strong>Maderas dulces + Vainilla + Extracto de ginseng</strong></p>
                       <p class="lineas">Ideal para pieles irritadas.</p>
-                      <p>Regenera - Protege - Antioxidante - Revitalizante</p>
+                      <p class="lineas">Regenera - Protege - Antioxidante - Revitalizante</p>
                     </div>
                   </div>
-                </div>
+                <!-- </div> -->
               </div>  
             </div>
           </div>
         </div>
-        <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
+        <h5 class="subtitulo_productos text-center mt-5">Productos relacionados</h5>
         <div class="container-fluid">
-            <div class="row cartaProducto">
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/tocadorRedondo.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top" alt="jabon redondo"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text">Jabónes de tocador redondos/rectangulares</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/masajeadorOrganico.html"><img src="../multimedia/Fotos Producto/p_masajeador_con_hojas.jpg" class="card-img-top" alt="masajeador organicas"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Masajeador con hojas orgánicas</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/exfoliantePies.html"><img src="../multimedia/Fotos Producto/p_jabones_exfoliantes_para_pies.jpg" class="card-img-top" alt="exfoliante pies"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Jabónes exfoliantes para pies</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col">
-                    <div class="card carta">
-                        <a href="../productos/exfolianteCorporal.html"><img src="../multimedia/Fotos Producto/p_jabones_exfoliantes_corporales.jpg" class="card-img-top" alt="exfoliante corporales"></a>
-                        <div class="card-body">
-                        <p class="card-text carta-text p-2 m-1">Jabónes exfoliantes corporales</p>
-                        </div>
-                    </div>
-                </div>
+          <div class="row cartaProducto">
+            <div class="col-md-4 card carta">
+              <a href="../productos/tocadorRedondo.html"><img
+                  src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top"
+                  alt="jabon redondo"></a>
+              <div class="card-body">
+                <p class="card-text carta-text">Jabónes de tocador redondos/rectangulares</p>
+              </div>
+            </div>
+            <div class="col-md-4 card carta">
+              <a href="../productos/masajeadorOrganico.html"><img src="../multimedia/Fotos Producto/p_masajeador_con_hojas.jpg"
+                  class="card-img-top" alt="masajeador organicas"></a>
+              <div class="card-body">
+                <p class="card-text carta-text p-2 m-1">Masajeador con hojas orgánicas</p>
+              </div>
+            </div>
+            <div class="col-md-4 card carta">
+              <a href="../productos/exfoliantePies.html"><img
+                  src="../multimedia/Fotos Producto/p_jabones_exfoliantes_para_pies.jpg" class="card-img-top"
+                  alt="exfoliante pies"></a>
+              <div class="card-body">
+                <p class="card-text carta-text p-2 m-1">Jabónes exfoliantes para pies</p>
+              </div>
+            </div>
+            <div class="col-md-4 card carta card carta">
+              <a href="../productos/exfolianteCorporal.html"><img
+                  src="../multimedia/Fotos Producto/p_jabones_exfoliantes_corporales.jpg" class="card-img-top"
+                  alt="exfoliante corporales"></a>
+              <div class="card-body">
+                <p class="card-text carta-text p-2 m-1">Jabónes exfoliantes corporales</p>
+              </div>
             </div>
           </div>
+        </div>
     </main>
     <footer>
-        <div class="container-fluid borde_pie">
+        <div class="container-fluid borde_pie gx-0">
             <div class="row align-items-center justify-content-between footer">
-              <div class="col-md-4">
+              <div class="col-md-4 card carta">
                 <img class="logo" src="../multimedia/Iconos Kirei/Kirei.jpg" alt="logo">
               </div>
-              <div class="col-md-4">
+              <div class="col-md-4 card carta">
                 <h5 class="subtitulo_footer">Navegación</h5>
                 <p class="mapa">inicio</p>
                 <p class="mapa">Catálogo</p>
