--- a/productos/tocadorCorazon.html
+++ b/productos/tocadorCorazon.html
@@ -57,9 +57,8 @@
           </div>
         </div>
         <h5 class="subtitulo_productos text-center">Productos relacionados</h5>
-        <div class="container-fluid">
             <div class="row cartaProducto">
-                <div class="col">
+                <div class="col-6 col-md-3">
                     <div class="card carta">
                         <a href="../productos/tocadorSemanal.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_semanal.jpg" class="card-img-top" alt="tocador semanal"></a>
                         <div class="card-body">
@@ -67,7 +66,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-6 col-md-3">
                     <div class="card carta">
                         <a href="../productos/bolsitasGemas.html"><img src="../multimedia/Fotos Producto/p_gemas_dulces.jpg" class="card-img-top" alt="bolsita gemas"></a>
                         <div class="card-body">
@@ -75,7 +74,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-6 col-md-3">
                     <div class="card carta">
                         <a href="../productos/patisseriePaletas.html"><img src="../multimedia/Fotos Producto/p_paletas.jpg" class="card-img-top" alt="patisserie paletas"></a>
                         <div class="card-body">
@@ -83,7 +82,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col">
+                <div class="col-6 col-md-3">
                     <div class="card carta">
                        <a href="../productos/tocadorRedondo.html"><img src="../multimedia/Fotos Producto/p_jabones_de_tocador_redondos_rectangulares.jpg" class="card-img-top" alt="tocador redondo"></a>
                         <div class="card-body">
@@ -92,7 +91,6 @@
                     </div>
                 </div>
             </div>
-          </div>
     </main>
     <footer>
         <div class="container-fluid borde_pie">
